Fix bug where on dark mode all elements have black background

--- a/src/app.css
+++ b/src/app.css
@@ -26,7 +26,7 @@
 	padding: 0;
 	margin: 0;
 	@apply border-black;
-	@apply dark:bg-black dark:text-white;
+	@apply dark:text-white;
 	@apply dark:border-white;
 }
 
@@ -34,7 +34,8 @@ html,
 body {
 	max-width: 100vw;
 	overflow-x: hidden;
-	font-family: Lilex, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+	font-family: Lilex, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	@apply dark:bg-black;
 }
 
 a {
